<resources>
    <string name="app_name">MovieCRUDApp</string>

    <!-- UI element labels -->
    <string name="movie_crud_name_input">Name</string>
    <string name="movie_crud_email_input">E-Mail Address*</string>
    <string name="movie_crud_password_input">Password*</string>
    <string name="movie_crud_confirm_input">Confirm Password*</string>
    <string name="movie_crud_sign_up_button">Sign Up</string>

    <string name="movie_crud_error_name_empty_label">Name cannot be empty</string>
    <string name="movie_crud_error_email_empty_label">Email is required</string>
    <string name="movie_crud_error_email_invalid_label">Invalid email format</string>
    <string name="movie_crud_error_password_empty_label">Password is required</string>
    <string name="movie_crud_error_password_short_label">Password must have at least 8 characters</string>
    <string name="movie_crud_error_confirm_label">Passwords do not match</string>

    <string name="movie_crud_label_greeting">Hello👋</string>
    <string name="movie_crud_label_your_favorites">Your <b>Favorites</b></string>
    <string name="movie_crud_label_staff_picks">Our <b>Staff Picks</b></string>

    <string name="movie_crud_label_overview">Overview</string>
    <string name="movie_crud_label_key_facts">Key Facts</string>
    <string name="movie_crud_label_budget">Budget</string>
    <string name="movie_crud_label_revenue">Revenue</string>
    <string name="movie_crud_label_language">Original Language</string>
    <string name="movie_crud_label_rating">Rating</string>

    <string name="movie_crud_label_search">Search</string>





    <!-- Content descriptors -->
    <string name="movie_crud_img_header_cd">MovieCRUDApp Image Header</string>
    <string name="movie_crud_img_picker_cd">MovieCRUDApp Image Picker Icon</string>
    <string name="movie_crud_search_icon_cd">MovieCRUDApp Image Search Icon</string>
    <string name="movie_crud_movie_cover_cd">MovieCRUDApp User Favorited Movie Cover</string>
    <string name="movie_crud_movie_cover_small_cd">MovieCRUDApp Movie Cover</string>
    <string name="movie_crud_label_favorite_button_cd">Favorite movie button</string>
    <string name="movie_crud_label_close_button_cd">Close modal dialog button</string>
    <string name="movie_crud_label_back_button_cd">Go back button</string>
    <string name="movie_crud_all_movies_label">All Movies</string>


</resources>