<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.jmrsa.moviecrudapp.presentation.fragments.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollViewDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/sectionModalActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/buttonFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="25dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/movie_crud_label_favorite_button_cd"
                    android:src="@drawable/ic_favorited_outline" />

                <ImageButton
                    android:id="@+id/buttonClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="25dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/movie_crud_label_close_button_cd"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMovieCoverLarge"
                android:layout_width="203dp"
                android:layout_height="295dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionModalActions">

                <ImageView
                    android:id="@+id/imageMovieCoverLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/movie_crud_movie_cover_cd"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/sectionBasicMovieInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="25dp"
                android:layout_marginHorizontal="35dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardMovieCoverLarge">

                <RatingBar
                    android:id="@+id/ratingMovieRatingDetails"
                    style="?android:attr/ratingBarStyleSmall"
                    android:progressTint="@color/golden_yellow"
                    android:progressBackgroundTint="@color/darkgray_alpha40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTimeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black_alpha40"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvTitleYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sectionMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionBasicMovieInfo">

                <TextView
                    android:id="@+id/labelOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/movie_crud_label_overview"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewmodel.viewState.movie.overview}"
                    android:textColor="@color/black_alpha40"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/labelKeyFacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/movie_crud_label_key_facts"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionMovieOverview" />

            <FrameLayout
                android:id="@+id/cardBudget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/rounded_corner_card"
                android:padding="16dp"
                app:layout_constraintEnd_toStartOf="@id/cardRevenue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelKeyFacts">

                <TextView
                    android:id="@+id/labelBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/movie_crud_label_budget"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cardRevenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_corner_card"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardBudget"
                app:layout_constraintTop_toBottomOf="@+id/labelKeyFacts">

                <TextView
                    android:id="@+id/labelRevenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/movie_crud_label_revenue"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRevenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cardLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/rounded_corner_card"
                android:padding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cardRating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardBudget">

                <TextView
                    android:id="@+id/labelLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/movie_crud_label_language"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cardRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_corner_card"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardLanguage"
                app:layout_constraintTop_toBottomOf="@+id/cardRevenue">

                <TextView
                    android:id="@+id/labelRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/movie_crud_label_rating"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:textSize="16sp" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>